--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <h2 class="text-lg sm:text-xl font-semibold text-slate-900">Application / Registration Form</h2>
               <p class="text-sm text-slate-600 mt-1">Fill in the details below and click <span class="font-semibold">Submit Application</span> to display a formatted summary of your information.</p>
             </div>
-            <span class="inline-flex items-center gap-1 rounded-full bg-emerald-50 text-emerald-700 text-xs font-medium px-3 py-1 border border-emerald-100">HTML • CSS • JavaScript • jQuery • PHP (backend example)</span>
+            <span class="inline-flex items-center gap-1 rounded-full bg-emerald-50 text-emerald-700 text-xs font-medium px-3 py-1 border border-emerald-100">HTML • CSS • JavaScript • jQuery • PHP</span>
           </div>
 
           <form id="applicationForm" class="space-y-6">
@@ -133,7 +133,7 @@
                 <label for="course" class="block text-sm font-medium text-slate-700 required">Course / Program Applying For</label>
                 <select id="course" name="course" class="mt-1 block w-full rounded-lg border border-slate-300 px-3 py-2 text-sm shadow-sm bg-white focus:outline-none focus:ring-2 focus:ring-sky-500 focus:border-sky-500" required>
                   <option value="">Select a course</option>
-                  <option>Bachelor of Computer Applications (BCA)</option>
+                  <option>Bachelor of Computer Science and Engineering (CSE)</option>
                   <option>Bachelor of Technology (B.Tech)</option>
                   <option>Master of Computer Applications (MCA)</option>
                   <option>Master of Business Administration (MBA)</option>
@@ -215,7 +215,7 @@
         <section id="output-section" class="glass-card rounded-2xl p-6 sm:p-8 border border-slate-200">
           <div class="flex items-center justify-between gap-4 mb-4">
             <h2 class="text-lg sm:text-xl font-semibold text-slate-900">Formatted Submission Output</h2>
-            <span class="text-xs text-slate-500">Displayed using JavaScript & jQuery (client-side)</span>
+            <span class="text-xs text-slate-500">Displayed using JavaScript, jQuery & PHP</span>
           </div>
           <p class="text-sm text-slate-600 mb-4">After you submit the form, your application details will appear below in a formatted layout. This simulates what a server-side PHP script might render.</p>
 
@@ -226,7 +226,7 @@
 
     <footer class="border-t border-slate-200 bg-white/80 backdrop-blur mt-8">
       <div class="max-w-5xl mx-auto px-4 py-4 text-center text-xs text-slate-500">
-        Online Application / Registration Form • Example academic assignment implementation
+        Online Application / Registration Form 
       </div>
     </footer>
   </div>
